investigate using static images

--- a/prototyping/07-plotly-display.ipynb
+++ b/prototyping/07-plotly-display.ipynb
@@ -882,7 +882,114 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "3a41debc-15db-4b70-b210-43c58a28e7e7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import base64"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "0bedf2f2-90ec-4249-8f10-357defecae67",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import imageio\n",
+    "from io import BytesIO\n",
+    "\n",
+    "in_memory_file = BytesIO()\n",
+    "\n",
+    "uint8_img = np.round(((image_stack[50, ...] - 0.2) / 0.2) * 255).astype(np.uint8)\n",
+    "\n",
+    "imageio.imsave(in_memory_file, uint8_img, format=\"png\")\n",
+    "in_memory_file.seek(0)\n",
+    "raw = in_memory_file.read()\n",
+    "b64 = base64.encodebytes(raw).decode()\n",
+    "img = f\"data:image/png;base64,{b64}\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "edc9899c-f5a6-425a-95a2-99b27917537a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c7804b0e-1801-43cd-bc3c-4a7c195b3203",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from plotly.subplots import make_subplots\n",
+    "\n",
+    "\n",
+    "fig = make_subplots(1, 1)\n",
+    "\n",
+    "\n",
+    "fig.update_layout(height=400)\n",
+    "\n",
+    "fig.add_layout_image(\n",
+    "        dict(\n",
+    "            visible=False,\n",
+    "            source=img,\n",
+    "            xref=\"x\",\n",
+    "            yref=\"y\",\n",
+    "            x=0,\n",
+    "            y=3,\n",
+    "            sizex=2,\n",
+    "            sizey=2,\n",
+    "            sizing=\"stretch\",\n",
+    "            # layer=\"below\"\n",
+    "        )\n",
+    ")\n",
+    "\n",
+    "# fig.update_layout(\n",
+    "#     {\n",
+    "#         \"hoverdistance\": 0,\n",
+    "#         \"height\": 900,\n",
+    "#         \"width\": 900,\n",
+    "#         \"dragmode\": \"pan\",\n",
+    "#         \"images\": [\n",
+    "#             {\n",
+    "#                 \"source\": b64,\n",
+    "#                 \"xref\": \"x\",\n",
+    "#                 \"yref\": \"y\",\n",
+    "#                 \"x\": 0,\n",
+    "#                 \"y\": 10,\n",
+    "#                 \"sizex\": 20,\n",
+    "#                 \"sizey\": 10,\n",
+    "                \n",
+    "#                 \"sizing\": \"stretch\",\n",
+    "#                 \"opacity\": 0.7,\n",
+    "#                 # \"layer\": \"below\"\n",
+    "#             },\n",
+    "#         ]\n",
+    "#     }\n",
+    "# )\n",
+    "print(fig)\n",
+    "\n",
+    "fig.layout.images[0].visible = True\n",
+    "\n",
+    "fig.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "42fc5bcf-cafe-4bd8-93b7-0f118e3b63b6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3c69b03b-4025-47f7-8cb7-fd0cebaab1a3",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -904,33 +1011,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig = go.FigureWidget(\n",
-    "    make_subplots(\n",
-    "        rows=2,\n",
-    "        cols=2,\n",
-    "        vertical_spacing=0,\n",
-    "        horizontal_spacing=0,\n",
-    "    )\n",
+    "fig = make_subplots(\n",
+    "    rows=2,\n",
+    "    cols=2,\n",
+    "    vertical_spacing=0,\n",
+    "    horizontal_spacing=0,\n",
     ")\n",
     "\n",
-    "fig.add_trace(\n",
-    "    go.Heatmap(\n",
-    "        x0=x0,\n",
-    "        dx=dx,\n",
-    "        y0=y0,\n",
-    "        dy=dy,\n",
-    "        z=image_stack[50, ...],\n",
-    "        colorscale=\"gray\",\n",
-    "        name=\"transverse\",\n",
-    "        zmin=0.2,\n",
-    "        zmax=0.4,\n",
-    "        xaxis=\"x\",\n",
-    "        yaxis=\"y\",\n",
-    "        # hoverinfo='skip',\n",
-    "    ), \n",
-    "    1,\n",
-    "    1,\n",
-    ")\n",
+    "for i in range(image_stack.shape[0]):\n",
+    "    fig.add_trace(\n",
+    "        go.Heatmap(\n",
+    "            visible = False,\n",
+    "            x0=x0,\n",
+    "            dx=dx,\n",
+    "            y0=y0,\n",
+    "            dy=dy,\n",
+    "            z=image_stack[i, ...],\n",
+    "            colorscale=\"gray\",\n",
+    "            name=\"transverse\",\n",
+    "            zmin=0.2,\n",
+    "            zmax=0.4,\n",
+    "            xaxis=\"x\",\n",
+    "            yaxis=\"y\",\n",
+    "            # hoverinfo='skip',\n",
+    "        ), \n",
+    "        1,\n",
+    "        1,\n",
+    "    )\n",
+    "\n",
+    "fig.data[50].visible = True\n",
     "\n",
     "fig.add_trace(\n",
     "    go.Heatmap(\n",
@@ -992,25 +1101,31 @@
     "\n",
     "fig.update_coloraxes(showscale=False)\n",
     "\n",
-    "# fig.show(\n",
-    "#     config={\n",
-    "#         'displayModeBar': False,\n",
-    "#         \"displaylogo\": False,\n",
-    "#         \"scrollZoom\": True,\n",
-    "#     }\n",
+    "fig.show(\n",
+    "    config={\n",
+    "        'displayModeBar': False,\n",
+    "        \"displaylogo\": False,\n",
+    "        \"scrollZoom\": True,\n",
+    "    }\n",
     "\n",
-    "# )\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f73bda14-484c-49f1-b6eb-001ab595c8ea",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig.show(\n",
+    "    config={\n",
+    "        'displayModeBar': False,\n",
+    "        \"displaylogo\": False,\n",
+    "        \"scrollZoom\": True,\n",
+    "    }\n",
     "\n",
-    "\n",
-    "\n",
-    "def navigate_with_click(trace, points, selector):\n",
-    "    print(trace)\n",
-    "    print(points)\n",
-    "    print(selector)\n",
-    "    \n",
-    "    \n",
-    "fig.data[0].on_click(navigate_with_click)\n",
-    "fig"
+    ")"
    ]
   },
   {
