--- a/prototyping/07-plotly-display.ipynb
+++ b/prototyping/07-plotly-display.ipynb
@@ -886,7 +886,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import base64"
+    "import base64\n",
+    "import imageio\n",
+    "from io import BytesIO\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a52fdff1-5aee-4d17-b406-a4e739e72195",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def convert_to_b64(image):\n",
+    "    in_memory_file = BytesIO()\n",
+    "    scaled_img = np.round(((image - 0.2) / 0.2) * 255)\n",
+    "    scaled_img[scaled_img < 0] = 0\n",
+    "    scaled_img[scaled_img > 255] = 255\n",
+    "    scaled_img = scaled_img.astype(np.uint8)\n",
+    "    in_memory_file.seek(0)\n",
+    "    imageio.imsave(in_memory_file, scaled_img, format=\"png\")\n",
+    "    in_memory_file.seek(0)\n",
+    "    raw = in_memory_file.read()\n",
+    "    b64 = base64.encodebytes(raw).decode()\n",
+    "    img = f\"data:image/png;base64,{b64}\"\n",
+    "    \n",
+    "    return img"
    ]
   },
   {
@@ -896,19 +921,42 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import imageio\n",
-    "from io import BytesIO\n",
-    "\n",
-    "in_memory_file = BytesIO()\n",
-    "\n",
-    "uint8_img = np.round(((image_stack[50, ...] - 0.2) / 0.2) * 255).astype(np.uint8)\n",
-    "\n",
-    "imageio.imsave(in_memory_file, uint8_img, format=\"png\")\n",
-    "in_memory_file.seek(0)\n",
-    "raw = in_memory_file.read()\n",
-    "b64 = base64.encodebytes(raw).decode()\n",
-    "img = f\"data:image/png;base64,{b64}\""
+    "transverse = []\n",
+    "for i in range(original_num_slices):\n",
+    "    img = convert_to_b64(image_stack[i, :, :])\n",
+    "    \n",
+    "    transverse.append(img)\n",
+    "    \n",
+    "    \n",
+    "coronal = []\n",
+    "for i in range(image_stack.shape[1]):\n",
+    "    img = convert_to_b64(image_stack[:, i, :])\n",
+    "    \n",
+    "    coronal.append(img)\n",
+    "    \n",
+    "    \n",
+    "sagittal = []\n",
+    "for i in range(image_stack.shape[2]):\n",
+    "    img = convert_to_b64(image_stack[:, -1::-1, i])\n",
+    "    \n",
+    "    sagittal.append(img)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "95a0f176-e00b-4bf1-a2b2-9b9deb641791",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c2caa3ec-a83f-423b-8adb-3c6132103f80",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -917,66 +965,6 @@
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c7804b0e-1801-43cd-bc3c-4a7c195b3203",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from plotly.subplots import make_subplots\n",
-    "\n",
-    "\n",
-    "fig = make_subplots(1, 1)\n",
-    "\n",
-    "\n",
-    "fig.update_layout(height=400)\n",
-    "\n",
-    "fig.add_layout_image(\n",
-    "        dict(\n",
-    "            visible=False,\n",
-    "            source=img,\n",
-    "            xref=\"x\",\n",
-    "            yref=\"y\",\n",
-    "            x=0,\n",
-    "            y=3,\n",
-    "            sizex=2,\n",
-    "            sizey=2,\n",
-    "            sizing=\"stretch\",\n",
-    "            # layer=\"below\"\n",
-    "        )\n",
-    ")\n",
-    "\n",
-    "# fig.update_layout(\n",
-    "#     {\n",
-    "#         \"hoverdistance\": 0,\n",
-    "#         \"height\": 900,\n",
-    "#         \"width\": 900,\n",
-    "#         \"dragmode\": \"pan\",\n",
-    "#         \"images\": [\n",
-    "#             {\n",
-    "#                 \"source\": b64,\n",
-    "#                 \"xref\": \"x\",\n",
-    "#                 \"yref\": \"y\",\n",
-    "#                 \"x\": 0,\n",
-    "#                 \"y\": 10,\n",
-    "#                 \"sizex\": 20,\n",
-    "#                 \"sizey\": 10,\n",
-    "                \n",
-    "#                 \"sizing\": \"stretch\",\n",
-    "#                 \"opacity\": 0.7,\n",
-    "#                 # \"layer\": \"below\"\n",
-    "#             },\n",
-    "#         ]\n",
-    "#     }\n",
-    "# )\n",
-    "print(fig)\n",
-    "\n",
-    "fig.layout.images[0].visible = True\n",
-    "\n",
-    "fig.show()"
-   ]
   },
   {
    "cell_type": "code",
@@ -992,7 +980,31 @@
    "id": "3c69b03b-4025-47f7-8cb7-fd0cebaab1a3",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "x0 = x_grid[0]\n",
+    "dx = x_grid[1] - x_grid[0]\n",
+    "y0 = y_grid[-1]\n",
+    "dy = y_grid[-2] - y_grid[-1]\n",
+    "z0 = z_grid[0]\n",
+    "dz = z_grid[1] - z_grid[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3bf5b602-910e-4e27-9af3-d002b8bc7939",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sizex = np.abs(x_grid[-1] - x_grid[0]) + dx\n",
+    "x = x0 - dx / 2\n",
+    "\n",
+    "sizey = np.abs(y_grid[-1] - y_grid[0]) + dy\n",
+    "y = y0 - dy / 2\n",
+    "\n",
+    "sizez = np.abs(z_grid[-1] - z_grid[0]) + dz\n",
+    "z = z0 - dz / 2"
+   ]
   },
   {
    "cell_type": "code",
@@ -1002,6 +1014,77 @@
    "outputs": [],
    "source": [
     "# go.Heatmap?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ab30f483-74eb-4e28-b3c7-38f77561afb8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "images = []\n",
+    "\n",
+    "for i, img in enumerate(transverse):\n",
+    "    images.append(\n",
+    "        dict(\n",
+    "            name=f\"transverse_{i}\",\n",
+    "            visible=i==50,\n",
+    "            source=img,\n",
+    "            xref=\"x\",\n",
+    "            yref=\"y\",\n",
+    "            x=x,\n",
+    "            y=y,\n",
+    "            sizex=sizex,\n",
+    "            sizey=sizey,\n",
+    "            sizing=\"stretch\",\n",
+    "            layer=\"below\",\n",
+    "        )\n",
+    "    )\n",
+    "    \n",
+    "for i, img in enumerate(coronal):\n",
+    "    images.append(\n",
+    "        dict(\n",
+    "            name=f\"coronal_{i}\",\n",
+    "            visible=i==256,\n",
+    "            source=img,\n",
+    "            xref=\"x3\",\n",
+    "            yref=\"y3\",\n",
+    "            x=x,\n",
+    "            y=z,\n",
+    "            sizex=sizex,\n",
+    "            sizey=sizez,\n",
+    "            sizing=\"stretch\",\n",
+    "            layer=\"below\",\n",
+    "        )\n",
+    "    )\n",
+    "    \n",
+    "for i, img in enumerate(sagittal):\n",
+    "    images.append(\n",
+    "        dict(\n",
+    "            name=f\"sagittal_{i}\",\n",
+    "            visible=i==256,\n",
+    "            source=img,\n",
+    "            xref=\"x4\",\n",
+    "            yref=\"y4\",\n",
+    "            x=y_grid[0] - dy/2,\n",
+    "            y=z,\n",
+    "            sizex=sizey,\n",
+    "            sizey=sizez,\n",
+    "            sizing=\"stretch\",\n",
+    "            layer=\"below\",\n",
+    "        )\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9034c595-abb2-4801-b5ae-504886016246",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "xx, yy = np.meshgrid(x_grid, y_grid)"
    ]
   },
   {
@@ -1018,77 +1101,42 @@
     "    horizontal_spacing=0,\n",
     ")\n",
     "\n",
-    "for i in range(image_stack.shape[0]):\n",
-    "    fig.add_trace(\n",
-    "        go.Heatmap(\n",
-    "            visible = False,\n",
-    "            x0=x0,\n",
-    "            dx=dx,\n",
-    "            y0=y0,\n",
-    "            dy=dy,\n",
-    "            z=image_stack[i, ...],\n",
-    "            colorscale=\"gray\",\n",
-    "            name=\"transverse\",\n",
-    "            zmin=0.2,\n",
-    "            zmax=0.4,\n",
-    "            xaxis=\"x\",\n",
-    "            yaxis=\"y\",\n",
-    "            # hoverinfo='skip',\n",
-    "        ), \n",
-    "        1,\n",
-    "        1,\n",
-    "    )\n",
-    "\n",
-    "fig.data[50].visible = True\n",
-    "\n",
     "fig.add_trace(\n",
     "    go.Heatmap(\n",
+    "        visible=True,\n",
     "        x0=x0,\n",
     "        dx=dx,\n",
-    "        y0=z0,\n",
-    "        dy=dz,\n",
-    "        z=image_stack[:,256,:],\n",
+    "        y0=y0,\n",
+    "        dy=dy,\n",
+    "        z=image_stack[50, ...],\n",
     "        colorscale=\"gray\",\n",
-    "        name=\"coronal\",\n",
+    "        name=\"transverse\",\n",
     "        zmin=0.2,\n",
     "        zmax=0.4,\n",
-    "        xaxis=\"x3\",\n",
-    "        yaxis=\"y3\",\n",
+    "        xaxis=\"x\",\n",
+    "        yaxis=\"y\",\n",
     "        # hoverinfo='skip',\n",
     "    ), \n",
-    "    2,\n",
+    "    1,\n",
     "    1,\n",
     ")\n",
     "\n",
-    "fig.add_trace(\n",
-    "    go.Heatmap(\n",
-    "        x0=y0,\n",
-    "        dx=dy,\n",
-    "        y0=z0,\n",
-    "        dy=dz,\n",
-    "        z=image_stack[:,:,256],\n",
-    "        colorscale=\"gray\",\n",
-    "        name=\"sagittal\",\n",
-    "        zmin=0.2,\n",
-    "        zmax=0.4,\n",
-    "        xaxis=\"x4\",\n",
-    "        yaxis=\"y4\",\n",
-    "        # hoverinfo='skip',\n",
-    "    ), \n",
-    "    2,\n",
-    "    2,\n",
-    ")\n",
     "\n",
     "axis_common = {\n",
-    "    \"constrain\":\"domain\", \"showticklabels\": False,\n",
-    "    \"spikesnap\": \"cursor\", \"spikemode\": \"across\", \"spikedash\": \"solid\", \"spikethickness\": 0,\n",
+    "    \"constrain\":\"domain\", \n",
+    "    \"showticklabels\": False,\n",
+    "    \"spikesnap\": \"data\", \n",
+    "    \"spikemode\": \"across\", \n",
+    "    \"spikedash\": \"solid\", \n",
+    "    \"spikethickness\": 0,\n",
     "}\n",
     "\n",
     "fig.update_layout(\n",
     "    {\n",
-    "        \"hoverdistance\": 0,\n",
+    "        # \"hoverdistance\": 0,\n",
     "        \"height\": 900,\n",
     "        \"width\": 900,\n",
+    "        \"images\": images,\n",
     "        \"dragmode\": \"pan\",\n",
     "        'xaxis': {\"range\": [-120, 150], 'scaleanchor': 'y', **axis_common},\n",
     "        'yaxis': {\"range\": [-100, 170],  **axis_common},\n",
@@ -1097,61 +1145,46 @@
     "        'yaxis4': {'matches': 'y3', **axis_common},\n",
     "        'xaxis4': {'matches': 'y',  **axis_common},\n",
     "    }\n",
+    ");\n",
+    "\n",
+    "post_script = \"\"\"\n",
+    "var plot_element = document.getElementById('{plot_id}');\n",
+    "\n",
+    "console.log('callback js has been added to page. did we get plot_element?');\n",
+    "console.log(plot_element);\n",
+    "\n",
+    "\n",
+    "plot_element.on('plotly_click', function(data){\n",
+    "    console.log('Im inside the plotly_click!!');\n",
+    "    console.log(data);\n",
+    "})\n",
+    "\n",
+    "\n",
+    "plot_element.on('plotly_doubleclick', function(data){\n",
+    "    console.log('Im inside the plotly_doubleclick!!');\n",
+    "    console.log(data);\n",
+    "})\n",
+    "\"\"\"\n",
+    "\n",
+    "html = fig.to_html(\n",
+    "    config={\n",
+    "        'displayModeBar': True,\n",
+    "        \"displaylogo\": False,\n",
+    "        \"scrollZoom\": True,\n",
+    "    },\n",
+    "    full_html=False,\n",
+    "    post_script=post_script,\n",
+    "    include_plotlyjs=False,\n",
+    "    validate=True,\n",
     ")\n",
     "\n",
-    "fig.update_coloraxes(showscale=False)\n",
-    "\n",
-    "fig.show(\n",
-    "    config={\n",
-    "        'displayModeBar': False,\n",
-    "        \"displaylogo\": False,\n",
-    "        \"scrollZoom\": True,\n",
-    "    }\n",
-    "\n",
-    ")"
+    "display(HTML(html))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f73bda14-484c-49f1-b6eb-001ab595c8ea",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fig.show(\n",
-    "    config={\n",
-    "        'displayModeBar': False,\n",
-    "        \"displaylogo\": False,\n",
-    "        \"scrollZoom\": True,\n",
-    "    }\n",
-    "\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "09117bf9-e23e-4bc3-b95d-37d2ba653709",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fig.data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1c176c7b-bdb2-40cb-a268-6bb3988e156d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(fig)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "76ce942d-3c21-40c0-a1b4-c8dd97bd919e",
+   "id": "7d9ae372-7391-4406-b7d3-53d15159dc77",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1159,79 +1192,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "82daceb8-0571-4364-a8ff-0f7473fabda2",
+   "id": "9d256165-4f02-404b-bcdd-6a9a150a803a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import ipywidgets as widgets"
+    "fig.to_html?"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "87728cb5-7b8c-4822-9f9b-00fea7caedf0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "widgets.__version__"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "112e9923-0dcc-49aa-8cd9-987907b2417e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "widgets.IntSlider(\n",
-    "    value=7,\n",
-    "    min=0,\n",
-    "    max=10,\n",
-    "    step=1,\n",
-    "    description='Test:',\n",
-    "    disabled=False,\n",
-    "    continuous_update=False,\n",
-    "    orientation='horizontal',\n",
-    "    readout=True,\n",
-    "    readout_format='d'\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "18e0f70d-b735-4529-9c00-680bffb36d9b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "41bf6ad7-5455-4495-b8ae-22a530d29a78",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fig.update_xaxes?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bb669dd4-ebd9-4745-8dd1-0bcf079e3290",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "go.Heatmap?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3245cf4f-69e4-4079-b15e-81e444691d82",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
