--- a/prototyping/07-plotly-display.ipynb
+++ b/prototyping/07-plotly-display.ipynb
@@ -1038,7 +1038,7 @@
     "            sizex=sizex,\n",
     "            sizey=sizey,\n",
     "            sizing=\"stretch\",\n",
-    "            layer=\"below\",\n",
+    "            # layer=\"below\",\n",
     "        )\n",
     "    )\n",
     "    \n",
@@ -1055,7 +1055,7 @@
     "            sizex=sizex,\n",
     "            sizey=sizez,\n",
     "            sizing=\"stretch\",\n",
-    "            layer=\"below\",\n",
+    "            # layer=\"below\",\n",
     "        )\n",
     "    )\n",
     "    \n",
@@ -1072,19 +1072,9 @@
     "            sizex=sizey,\n",
     "            sizey=sizez,\n",
     "            sizing=\"stretch\",\n",
-    "            layer=\"below\",\n",
+    "            # layer=\"below\",\n",
     "        )\n",
     "    )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9034c595-abb2-4801-b5ae-504886016246",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "xx, yy = np.meshgrid(x_grid, y_grid)"
    ]
   },
   {
@@ -1115,10 +1105,49 @@
     "        zmax=0.4,\n",
     "        xaxis=\"x\",\n",
     "        yaxis=\"y\",\n",
+    "        hover_data={\"z\": False}\n",
     "        # hoverinfo='skip',\n",
     "    ), \n",
     "    1,\n",
     "    1,\n",
+    ")\n",
+    "\n",
+    "fig.add_trace(\n",
+    "    go.Heatmap(\n",
+    "        x0=x0,\n",
+    "        dx=dx,\n",
+    "        y0=z0,\n",
+    "        dy=dz,\n",
+    "        z=image_stack[:,256,:],\n",
+    "        colorscale=\"gray\",\n",
+    "        name=\"coronal\",\n",
+    "        zmin=0.2,\n",
+    "        zmax=0.4,\n",
+    "        xaxis=\"x3\",\n",
+    "        yaxis=\"y3\",\n",
+    "        # hoverinfo='skip',\n",
+    "    ), \n",
+    "    2,\n",
+    "    1,\n",
+    ")\n",
+    "\n",
+    "fig.add_trace(\n",
+    "    go.Heatmap(\n",
+    "        x0=y0,\n",
+    "        dx=dy,\n",
+    "        y0=z0,\n",
+    "        dy=dz,\n",
+    "        z=image_stack[:,:,256],\n",
+    "        colorscale=\"gray\",\n",
+    "        name=\"sagittal\",\n",
+    "        zmin=0.2,\n",
+    "        zmax=0.4,\n",
+    "        xaxis=\"x4\",\n",
+    "        yaxis=\"y4\",\n",
+    "        # hoverinfo='skip',\n",
+    "    ), \n",
+    "    2,\n",
+    "    2,\n",
     ")\n",
     "\n",
     "\n",
