--- a/prototyping/07-plotly-display.ipynb
+++ b/prototyping/07-plotly-display.ipynb
@@ -1105,8 +1105,8 @@
     "        zmax=0.4,\n",
     "        xaxis=\"x\",\n",
     "        yaxis=\"y\",\n",
-    "        hover_data={\"z\": False}\n",
-    "        # hoverinfo='skip',\n",
+    "        hoverinfo='none',\n",
+    "        opacity=0,\n",
     "    ), \n",
     "    1,\n",
     "    1,\n",
@@ -1125,7 +1125,8 @@
     "        zmax=0.4,\n",
     "        xaxis=\"x3\",\n",
     "        yaxis=\"y3\",\n",
-    "        # hoverinfo='skip',\n",
+    "        hoverinfo='none',\n",
+    "        opacity=0,\n",
     "    ), \n",
     "    2,\n",
     "    1,\n",
@@ -1144,7 +1145,8 @@
     "        zmax=0.4,\n",
     "        xaxis=\"x4\",\n",
     "        yaxis=\"y4\",\n",
-    "        # hoverinfo='skip',\n",
+    "        hoverinfo='none',\n",
+    "        opacity=0,\n",
     "    ), \n",
     "    2,\n",
     "    2,\n",
@@ -1179,19 +1181,60 @@
     "post_script = \"\"\"\n",
     "var plot_element = document.getElementById('{plot_id}');\n",
     "\n",
-    "console.log('callback js has been added to page. did we get plot_element?');\n",
-    "console.log(plot_element);\n",
+    "console.log(\"{plot_id}\")\n",
     "\n",
+    "\n",
+    "var arrayLength = plot_element.layout.images.length;\n",
+    "var imageIndices = {\n",
+    "    \"transverse\": {},\n",
+    "    \"coronal\": {},\n",
+    "    \"sagittal\": {},\n",
+    "}\n",
+    "\n",
+    "var updateOrientations = {\n",
+    "    \"transverse\": [\"sagittal\", \"coronal\"],\n",
+    "    \"coronal\": [\"sagittal\", \"transverse\"],\n",
+    "    \"sagittal\": [\"coronal\", \"transverse\"],\n",
+    "}\n",
+    "\n",
+    "for (var i = 0; i < arrayLength; i++) {   \n",
+    "    var image = plot_element.layout.images[i]\n",
+    "    var splitImageName = image.name.split(\"_\")\n",
+    "    \n",
+    "    var orientation = splitImageName[0]\n",
+    "    var sliceIndex = splitImageName[1]\n",
+    "    \n",
+    "    imageIndices[orientation][sliceIndex] = i\n",
+    "}\n",
     "\n",
     "plot_element.on('plotly_click', function(data){\n",
-    "    console.log('Im inside the plotly_click!!');\n",
-    "    console.log(data);\n",
-    "})\n",
+    "    var point = data.points[0]\n",
+    "    var clickedOrientation = point.data.name\n",
     "\n",
-    "\n",
-    "plot_element.on('plotly_doubleclick', function(data){\n",
-    "    console.log('Im inside the plotly_doubleclick!!');\n",
-    "    console.log(data);\n",
+    "    var clickedX = point.pointIndex[1]\n",
+    "    var clickedY = point.pointIndex[0]\n",
+    "    \n",
+    "    var xUpdate = updateOrientations[clickedOrientation][0]\n",
+    "    var yUpdate = updateOrientations[clickedOrientation][1]\n",
+    "    \n",
+    "    var imageIndex\n",
+    "    \n",
+    "    for (var i = 0; i < Object.keys(imageIndices[xUpdate]).length; i++) {  \n",
+    "        imageIndex = imageIndices[xUpdate][i]\n",
+    "        plot_element.layout.images[imageIndex].visible = false\n",
+    "    }\n",
+    "    for (var i = 0; i < Object.keys(imageIndices[yUpdate]).length; i++) {   \n",
+    "        imageIndex = imageIndices[yUpdate][i]\n",
+    "        plot_element.layout.images[imageIndex].visible = false\n",
+    "    }\n",
+    "    \n",
+    "    imageIndex = imageIndices[xUpdate][clickedX]\n",
+    "    plot_element.layout.images[imageIndex].visible = true\n",
+    "    \n",
+    "    imageIndex = imageIndices[yUpdate][clickedY]\n",
+    "    plot_element.layout.images[imageIndex].visible = true\n",
+    "    \n",
+    "    Plotly.react(plot_element, plot_element.data, plot_element.layout)\n",
     "})\n",
     "\"\"\"\n",
     "\n",
