--- a/prototyping/08-further-plotly.ipynb
+++ b/prototyping/08-further-plotly.ipynb
@@ -615,9 +615,11 @@
    "source": [
     "from rai.display import interactive\n",
     "\n",
-    "grids=(z_grid, y_grid, x_grid)\n",
-    "vmin = 0.2\n",
-    "vmax = 0.4"
+    "grids=([1,2,3], [10,11,12], [-3, -4, -5])\n",
+    "vmin = 0\n",
+    "vmax = 1\n",
+    "\n",
+    "mock_image = np.reshape(np.array(range(27)) / 26, (3,3,3))"
    ]
   },
   {
@@ -627,7 +629,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "transverse, coronal, sagittal = interactive._collect_slices(original_image_stack, vmin, vmax)"
+    "transverse, coronal, sagittal = interactive.collect_slices(mock_image, vmin, vmax)"
    ]
   },
   {
@@ -636,9 +638,7 @@
    "id": "f9acf3ab-8e37-4c7e-8d4e-a1c6bc366d94",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "images = interactive._create_plotly_layout_images(grids, transverse, coronal, sagittal)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -655,9 +655,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "images = interactive.create_plotly_layout_images(grids, (0,0,0), transverse, coronal, sagittal)\n",
+    "\n",
     "interactive.draw(\n",
     "    grids=(z_grid, y_grid, x_grid),\n",
-    "    images=images\n",
+    "    images=images,\n",
+    "    ranges=[\n",
+    "        [1,3],\n",
+    "        [10,12],\n",
+    "        [-3,-5],\n",
+    "    ]\n",
     ")"
    ]
   },
