--- a/prototyping/08-further-plotly.ipynb
+++ b/prototyping/08-further-plotly.ipynb
@@ -658,7 +658,7 @@
     "images = interactive.create_plotly_layout_images(grids, (0,0,0), transverse, coronal, sagittal)\n",
     "\n",
     "interactive.draw(\n",
-    "    grids=(z_grid, y_grid, x_grid),\n",
+    "    grids=grids,\n",
     "    images=images,\n",
     "    ranges=[\n",
     "        [1,3],\n",
