--- a/prototyping/08-further-plotly.ipynb
+++ b/prototyping/08-further-plotly.ipynb
@@ -635,22 +635,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f9acf3ab-8e37-4c7e-8d4e-a1c6bc366d94",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "60da922b-5042-4159-aa52-a264d9031ee1",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "a92f7576-6da8-4e90-9333-06f1966c4e7b",
    "metadata": {},
    "outputs": [],
@@ -667,6 +651,67 @@
     "    ]\n",
     ")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "98bc1eba-86fe-4f1a-9604-682db0f0e37d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a477d2de-d55d-42d3-96d2-8dea35c13c32",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8b94326a-1ce0-4115-97be-e152efd15506",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "transverse, coronal, sagittal = interactive.collect_slices(\n",
+    "    original_image_stack, \n",
+    "    vmin = 0.2, \n",
+    "    vmax = 0.4,\n",
+    ")\n",
+    "\n",
+    "grids = (z_grid, y_grid, x_grid)\n",
+    "\n",
+    "images = interactive.create_plotly_layout_images(\n",
+    "    grids, (50, 256, 256), transverse, coronal, sagittal)\n",
+    "\n",
+    "interactive.draw(\n",
+    "    grids=grids,\n",
+    "    images=images,\n",
+    "    ranges=[\n",
+    "        [-150, 100],\n",
+    "        [80, -170],\n",
+    "        [125,-125],\n",
+    "    ]\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b65aa34a-a9cd-4005-80ff-77a8f2a656c6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4816b569-6aa2-4858-8578-ba94a919dde0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
