--- a/prototyping/09-add-in-contours.ipynb
+++ b/prototyping/09-add-in-contours.ipynb
@@ -600,7 +600,7 @@
     "# TODO: Allow creation over other axis\n",
     "# First, verify that this can be used within plotly on tranverse\n",
     "\n",
-    "predicted_contours_by_structure = rai.masks_to_contours_by_structure(\n",
+    "transverse_contours = rai.masks_to_contours_by_structure(\n",
     "    cfg=cfg, x_grid=x_grid, y_grid=y_grid, masks=predicted_masks[0:original_num_slices, ...]\n",
     ")"
    ]
@@ -618,7 +618,7 @@
     "\n",
     "fig = go.Figure()\n",
     "\n",
-    "contours = predicted_contours_by_structure[TG263.Brain][50]\n",
+    "contours = transverse_contours[TG263.Brain][50]\n",
     "\n",
     "for contour in contours:\n",
     "    contour_array = np.array(contour + [contour[0]])\n",
@@ -627,7 +627,8 @@
     "        x=contour_array[:, 0],\n",
     "        y=contour_array[:, 1],\n",
     "        hoverinfo=\"skip\",\n",
-    "        mode=\"lines\"\n",
+    "        mode=\"lines\",\n",
+    "        marker={\"color\": \"blue\"},\n",
     "    ))\n",
     "fig.show()"
    ]
@@ -639,7 +640,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(fig)"
+    "# print(fig)"
    ]
   },
   {
@@ -684,7 +685,13 @@
    "id": "a477d2de-d55d-42d3-96d2-8dea35c13c32",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "transverse, coronal, sagittal = interactive.collect_slices(\n",
+    "    original_image_stack, \n",
+    "    vmin = 0.2, \n",
+    "    vmax = 0.4,\n",
+    ")\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -693,25 +700,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "transverse, coronal, sagittal = interactive.collect_slices(\n",
-    "    original_image_stack, \n",
-    "    vmin = 0.2, \n",
-    "    vmax = 0.4,\n",
-    ")\n",
-    "\n",
     "grids = (z_grid, y_grid, x_grid)\n",
     "\n",
+    "visible_slice_indices = (50, 256, 256)\n",
+    "\n",
     "images = interactive.create_plotly_layout_images(\n",
-    "    grids, (50, 256, 256), transverse, coronal, sagittal)\n",
+    "    grids, visible_slice_indices, transverse, coronal, sagittal)\n",
     "\n",
     "interactive.draw(\n",
+    "    cfg=cfg,\n",
     "    grids=grids,\n",
     "    images=images,\n",
     "    ranges=[\n",
     "        [-150, 100],\n",
     "        [80, -170],\n",
-    "        [125,-125],\n",
-    "    ]\n",
+    "        [-115, 135],\n",
+    "    ],\n",
+    "    transverse_contours=transverse_contours,\n",
+    "    visible_slice_indices=visible_slice_indices\n",
     ")"
    ]
   },
