--- a/prototyping/09-add-in-contours.ipynb
+++ b/prototyping/09-add-in-contours.ipynb
@@ -707,7 +707,7 @@
     "images = interactive.create_plotly_layout_images(\n",
     "    grids, visible_slice_indices, transverse, coronal, sagittal)\n",
     "\n",
-    "interactive.draw(\n",
+    "fig = interactive.draw(\n",
     "    cfg=cfg,\n",
     "    grids=grids,\n",
     "    images=images,\n",
@@ -727,7 +727,9 @@
    "id": "b65aa34a-a9cd-4005-80ff-77a8f2a656c6",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "print(fig)"
+   ]
   },
   {
    "cell_type": "code",
