iterating plotly display

--- a/prototyping/09-add-in-contours.ipynb
+++ b/prototyping/09-add-in-contours.ipynb
@@ -605,6 +605,35 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "7f61b9f9-cebc-45b5-b3ea-21fd39cb7d80",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "coronal_contours = rai.masks_to_contours_by_structure(\n",
+    "    cfg=cfg, x_grid=x_grid, y_grid=z_grid, masks=predicted_masks[0:original_num_slices, ...], axis=1\n",
+    ")\n",
+    "sagittal_contours = rai.masks_to_contours_by_structure(\n",
+    "    cfg=cfg, x_grid=y_grid, y_grid=z_grid, masks=predicted_masks[0:original_num_slices, ...], axis=2\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9c26eae9-4e17-4b1f-98b2-86d6daafb49e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "contours = {\n",
+    "    \"transverse\": transverse_contours,\n",
+    "    \"coronal\": coronal_contours,\n",
+    "    \"sagittal\": sagittal_contours,\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "3b304057-6519-4311-bd85-1f7e2cb4905e",
    "metadata": {},
    "outputs": [],
@@ -685,7 +714,7 @@
     "        [80, -170],\n",
     "        [-115, 135],\n",
     "    ],\n",
-    "    transverse_contours=transverse_contours,\n",
+    "    contours=contours,\n",
     "    visible_slice_indices=visible_slice_indices\n",
     ")"
    ]
