ignoring points where all of image patch is <= 0.1

--- a/prototyping/10-full-inference-in-lib.ipynb
+++ b/prototyping/10-full-inference-in-lib.ipynb
@@ -344,7 +344,13 @@
     "x = [65, 105, 145, 185]\n",
     "\n",
     "predicted_masks = rai.inference_over_jittered_grid(\n",
-    "    cfg=cfg, model=rai_dependent_model, grid=(z, y, x), image_stack=reduced_image_stack, masks_stack=upscaled, max_batch_size=10\n",
+    "    cfg=cfg, \n",
+    "    model=rai_dependent_model, \n",
+    "    grid=(z, y, x), \n",
+    "    image_stack=reduced_image_stack, \n",
+    "    masks_stack=upscaled, \n",
+    "    max_batch_size=10,\n",
+    "    verify=False  # TODO: Remove this before publishing\n",
     ")"
    ]
   },
