fine tuning interactive legend

--- a/prototyping/10-full-inference-in-lib.ipynb
+++ b/prototyping/10-full-inference-in-lib.ipynb
@@ -102,24 +102,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "841eee57-9e8e-4fcb-bdcd-d95bef5fa1d2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "rai_starting_model, rai_dependent_model = rai.load_model(cfg=cfg)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "49d2ebb7-abd3-4b8c-b535-210310f98bd9",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "e53da7c8-a538-4a74-ab2e-861ede4bb1d8",
    "metadata": {},
    "outputs": [],
@@ -131,263 +113,32 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7ac235ab-cacb-40ea-91b6-ff45353626e1",
+   "id": "9368efc8-f8b4-4cbb-bb8b-a14431722c92",
    "metadata": {},
    "outputs": [],
    "source": [
-    "x_grid, y_grid, z_grid, original_image_stack, image_uids = rai.paths_to_image_stack_hfs(\n",
-    "    cfg=cfg, paths=image_paths\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f2e650ce-2ab5-46fd-93f0-403fa8252ccd",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "original_image_stack.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "02a26778-4f7b-4eb9-a028-8fb1357b9d8b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "original_num_slices = original_image_stack.shape[0]\n",
-    "\n",
-    "slice_reduction = cfg[\"reduce_block_sizes\"][0][0]\n",
-    "desired_num_slices = int(np.ceil(original_num_slices / slice_reduction) * slice_reduction)\n",
-    "\n",
-    "if original_num_slices != desired_num_slices:\n",
-    "    image_stack = original_image_stack.take(range(desired_num_slices), axis=0, mode='clip')\n",
-    "else:\n",
-    "    image_stack = original_image_stack\n",
-    "    \n",
-    "num_slices = image_stack.shape[0]\n",
-    "assert num_slices == desired_num_slices\n",
-    "assert image_stack.shape[1:3] == (512, 512)\n",
-    "\n",
-    "image_stack.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "eb710540-d375-4490-a2ce-e9b41cbc420a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "reduced_image_stack = skimage.measure.block_reduce(image_stack, block_size=cfg[\"reduce_block_sizes\"][0], func=np.mean)\n",
-    "reduced_image_stack.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2c699b9d-04a8-417c-b19e-555b82158c2e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "310 / 4"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "39b5bb39-a3b1-4bb5-8e11-abdaf0caf44e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "step_size = 40\n",
-    "\n",
-    "reduced_num_slices = reduced_image_stack.shape[0]\n",
-    "step_size = int(np.ceil(reduced_num_slices / np.ceil(reduced_num_slices / step_size)))\n",
-    "z = list(range(0, reduced_num_slices, step_size)) + [reduced_num_slices]\n",
-    "z"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6b18fc55-6207-4951-8927-6c20cc5ea36f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "y = [30, 60, 90]\n",
-    "x = [30, 60, 90]\n",
-    "\n",
-    "predicted_masks = rai.inference_over_jittered_grid(\n",
-    "    cfg=cfg, model=rai_starting_model, grid=(z, y, x), image_stack=reduced_image_stack, max_batch_size=10\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ff3c2602-c6e1-425b-9a38-ae47a428b038",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "where_mask = np.where(predicted_masks > 127.5)\n",
-    "np.min(where_mask, axis=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0589eefb-f332-4e2f-80af-c024afb456d7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "np.max(where_mask, axis=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e8d8cf9a-8dce-4461-ab7e-d78c3792cafb",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# predicted_masks = rai.inference_over_jittered_grid(\n",
-    "#     cfg=cfg, model=rai_dependent_model, grid=(z, y, x), image_stack=reduced_image_stack, masks_stack=predicted_masks\n",
-    "# )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6f51bcd4-8f5b-410c-8f7b-8ec94569f531",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cfg[\"reduce_block_sizes\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d5012fcb-e18a-4599-9569-0de0ec55c5a8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "upscaled = predicted_masks\n",
-    "\n",
-    "for i in range(3):\n",
-    "    upscaled = np.repeat(upscaled, repeats=2, axis=i)\n",
-    "\n",
-    "\n",
-    "assert upscaled.shape[0] == image_stack.shape[0]\n",
-    "    \n",
-    "upscaled.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5372a486-56f7-4f6a-b9f9-f55a6ec6f512",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "where_mask = np.where(upscaled > 127.5)\n",
-    "np.min(where_mask, axis=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "198822e0-a509-485c-8795-3a07e604c091",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "np.max(where_mask, axis=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5a338a26-bf5b-4c50-ae25-a86f85b9edf1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "reduced_image_stack = skimage.measure.block_reduce(image_stack, block_size=cfg[\"reduce_block_sizes\"][1], func=np.mean)\n",
-    "reduced_image_stack.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a6d77fd3-55fa-4456-a5b8-9fc6c7768f1f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "step_size = 40\n",
-    "\n",
-    "reduced_num_slices = reduced_image_stack.shape[0]\n",
-    "step_size = int(np.ceil(reduced_num_slices / np.ceil(reduced_num_slices / step_size)))\n",
-    "z = list(range(0, reduced_num_slices, step_size)) + [reduced_num_slices]\n",
-    "z"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "669f8f6c-ec7a-4b64-ad87-967df94d8ee6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "y = [60, 95, 130, 165]\n",
-    "x = [65, 105, 145, 185]\n",
-    "\n",
-    "predicted_masks = rai.inference_over_jittered_grid(\n",
-    "    cfg=cfg, \n",
-    "    model=rai_dependent_model, \n",
-    "    grid=(z, y, x), \n",
-    "    image_stack=reduced_image_stack, \n",
-    "    masks_stack=upscaled, \n",
+    "x_grid, y_grid, z_grid, image_uids, image_stack, predicted_masks = rai.inference_from_dicom_image_paths(\n",
+    "    cfg=cfg,\n",
+    "    image_paths=image_paths,\n",
     "    max_batch_size=10,\n",
-    "    verify=False  # TODO: Remove this before publishing\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8a96db31-fd49-4062-b349-5b538bf26f2b",
+   "id": "b0ce67e8-07fa-401d-a858-fa4cd191441d",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "predicted_masks.shape"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "da775954-a252-46a5-acfc-6d79b39d7c3a",
+   "id": "dc2039f4-2ff2-4b89-9b97-75680d56bec0",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "np.max(predicted_masks)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "560f6d51-89ef-4cbf-a7cf-4d3f778d30e3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "upscaled = predicted_masks\n",
-    "\n",
-    "for i in range(1,3):\n",
-    "    upscaled = np.repeat(upscaled, repeats=2, axis=i)\n",
-    "    \n",
-    "upscaled.shape"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -440,144 +191,26 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "324e2854-eaee-4904-9bbe-8a2ab4f85510",
+   "id": "a411139f-fd6d-4884-b516-4b4c8f9f46c7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "num_slices = image_stack.shape[0]\n",
-    "step_size = int(np.ceil(num_slices / np.ceil(num_slices / 40)))\n",
-    "z = list(range(0, num_slices, step_size)) + [num_slices]\n",
-    "z"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "387c00ad-c50b-494b-9fe1-532d1bfca7c0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "where_mask = np.where(upscaled > 127.5)\n",
-    "np.min(where_mask, axis=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0ff403b6-644a-4de6-bee3-3b22ea607400",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "np.max(where_mask, axis=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6f16e58e-3238-4d4c-beac-f065efc5db51",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "y = list(range(125, 330, 40))\n",
-    "y"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d2cd3fbd-b850-4ee1-89f5-76380054896f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x = list(range(130, 380, 40))\n",
-    "x"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1621af70-0d0b-481c-b0cc-4d6840903468",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "predicted_masks = upscaled\n",
+    "predicted_contours_by_structure = rai.masks_to_contours_by_structure(\n",
+    "    cfg=cfg, x_grid=x_grid, y_grid=y_grid, masks=predicted_masks\n",
+    ")\n",
     "\n",
-    "looped_dice = []\n",
-    "for i in range(1):\n",
-    "    predicted_masks = rai.inference_over_jittered_grid(\n",
-    "        cfg=cfg, \n",
-    "        model=rai_dependent_model, \n",
-    "        grid=(z, y, x), \n",
-    "        image_stack=image_stack, \n",
-    "        masks_stack=predicted_masks, \n",
-    "        max_batch_size=10, \n",
-    "        verify=False  # TODO: Remove this before publishing\n",
+    "aligned_predicted_contours_by_structure = rai.merge_contours_by_structure(\n",
+    "    predicted_contours_by_structure, align_map\n",
+    ")\n",
+    "\n",
+    "dice = {}\n",
+    "for name in align_map:\n",
+    "    dice[name] = rai.dice_from_contours_by_slice(\n",
+    "        dicom_contours_by_structure[name],\n",
+    "        aligned_predicted_contours_by_structure[name],\n",
     "    )\n",
     "    \n",
-    "    \n",
-    "    predicted_contours_by_structure = rai.masks_to_contours_by_structure(\n",
-    "        cfg=cfg, x_grid=x_grid, y_grid=y_grid, masks=predicted_masks[0:original_num_slices, ...]\n",
-    "    )\n",
-    "    \n",
-    "    aligned_predicted_contours_by_structure = rai.merge_contours_by_structure(\n",
-    "        predicted_contours_by_structure, align_map\n",
-    "    )\n",
-    "    \n",
-    "    dice = {}\n",
-    "    for name in align_map:\n",
-    "        dice[name] = rai.dice_from_contours_by_slice(\n",
-    "            dicom_contours_by_structure[name],\n",
-    "            aligned_predicted_contours_by_structure[name],\n",
-    "        )\n",
-    "        \n",
-    "    looped_dice.append(dice)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b2a019aa-ff96-42b9-90f1-b8f1d69d71ee",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for name in structure_names:\n",
-    "    dice = []\n",
-    "    for item in looped_dice:\n",
-    "        dice.append(item[name])\n",
-    "        \n",
-    "    plt.plot(dice, '-o', label=name)\n",
-    "    \n",
-    "plt.legend()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d267157e-25c6-40ae-b948-5cbd32d4d78f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# predicted_contours_by_structure"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fc3f0eb4-ac4b-4402-aec3-47c6aaef28e0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# looped_dice"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e4d91a0e-4961-40a7-9711-7f7deba69668",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# TODO: Create an ipywidget slider for the slices"
+    "dice"
    ]
   },
   {
@@ -591,27 +224,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d556f41b-78a3-4a4f-b240-e84839b7d13f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from rai.display import interactive"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "5f91eb53-9d22-45c7-8618-26deb8f99253",
    "metadata": {},
    "outputs": [],
    "source": [
-    "interactive.draw_contours_from_masks(\n",
+    "rai.draw_contours_from_masks(\n",
     "    cfg=cfg,\n",
     "    z_grid=z_grid,\n",
     "    y_grid=y_grid,\n",
     "    x_grid=x_grid,\n",
-    "    image_stack=original_image_stack,\n",
-    "    masks=predicted_masks[0:original_num_slices, ...],\n",
+    "    image_stack=image_stack,\n",
+    "    masks=predicted_masks,\n",
     "    vmin=0.2,\n",
     "    vmax=0.4,\n",
     ")"
