--- a/prototyping/10-full-inference-in-lib.ipynb
+++ b/prototyping/10-full-inference-in-lib.ipynb
@@ -237,6 +237,7 @@
     "    masks=predicted_masks,\n",
     "    vmin=0.2,\n",
     "    vmax=0.4,\n",
+    "    orientations=(\"transverse\",)\n",
     ")"
    ]
   },
