working with matplotlib animation instead

--- a/prototyping/10-full-inference-in-lib.ipynb
+++ b/prototyping/10-full-inference-in-lib.ipynb
@@ -216,10 +216,87 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "29045f40-aec9-43a9-941e-7048dd11412d",
+   "id": "ff9b67a0-665c-42d1-a54d-49dae5a8ca8d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%matplotlib widget"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c876d956-1858-4c5c-91fe-67527f8cf8bc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# from matplotlib import pyplot as plt\n",
+    "# from matplotlib import animation\n",
+    "\n",
+    "# fig = plt.figure()\n",
+    "\n",
+    "# ax = plt.axes(xlim=(0, 2), ylim=(0, 100))\n",
+    "\n",
+    "# N = 4\n",
+    "# lines = [plt.plot([], [])[0] for _ in range(N)] #lines to animate\n",
+    "\n",
+    "# rectangles = plt.bar([0.5,1,1.5],[50,40,90],width=0.1) #rectangles to animate\n",
+    "\n",
+    "# patches = lines + list(rectangles) #things to animate\n",
+    "\n",
+    "# def init():\n",
+    "#     #init lines\n",
+    "#     for line in lines:\n",
+    "#         line.set_data([], [])\n",
+    "\n",
+    "#     #init rectangles\n",
+    "#     for rectangle in rectangles:\n",
+    "#         rectangle.set_height(0)\n",
+    "\n",
+    "#     return patches #return everything that must be updated\n",
+    "\n",
+    "# def animate(i):\n",
+    "#     #animate lines\n",
+    "#     for j,line in enumerate(lines):\n",
+    "#         line.set_data([0, 2], [10 * j,i])\n",
+    "\n",
+    "#     #animate rectangles\n",
+    "#     for j,rectangle in enumerate(rectangles):\n",
+    "#         rectangle.set_height(i/(j+1))\n",
+    "\n",
+    "#     return patches #return everything that must be updated\n",
+    "\n",
+    "# anim = animation.FuncAnimation(fig, animate, init_func=init,\n",
+    "#                                frames=100, interval=20, blit=True)\n",
+    "\n",
+    "# plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c11ac6ca-031e-4d68-8c0e-6ae7cdaf7fbc",
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "28488663-c947-4355-be28-e1621678c2d4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "29045f40-aec9-43a9-941e-7048dd11412d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rai.plot_contours_by_structure(x_grid, y_grid, image_stack, predicted_contours_by_structure)"
+   ]
   },
   {
    "cell_type": "code",
