testing effect of step size

--- a/prototyping/11-optimise-step-size.ipynb
+++ b/prototyping/11-optimise-step-size.ipynb
@@ -114,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "60f4de14-450c-4741-bcb9-097772d0a14f",
+   "id": "53413e01-c7fc-4974-9be3-b1d98f044274",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +124,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c2d52c0e-d533-40ba-becf-a83a802d7205",
+   "id": "3a93411a-964f-4816-9e2b-e15dfd465016",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "z_grid, y_grid, x_grid = grids"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2c7a676d-f5b9-48cd-8a78-790c1a92852e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,47 +144,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b37604fa-72a7-4414-8ff8-112d7ea0e19a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9368efc8-f8b4-4cbb-bb8b-a14431722c92",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "predicted_masks = rai.inference(\n",
-    "    cfg=cfg,\n",
-    "    models=models,\n",
-    "    image_stack=image_stack,\n",
-    "    max_batch_size=10,\n",
-    "    step_size=40,\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b0ce67e8-07fa-401d-a858-fa4cd191441d",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "dc2039f4-2ff2-4b89-9b97-75680d56bec0",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0716adaf-53dd-4e81-b5b0-ed6210cd87c5",
+   "id": "c95f5a97-5d27-44a1-8e75-add03df1de01",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,7 +155,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "73107915-f68c-494e-808b-9a57674ee07a",
+   "id": "e1216bd6-b38c-4de0-8e89-ee826984abf6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,8 +185,33 @@
     "\n",
     "dicom_contours_by_structure = rai.dicom_to_contours_by_structure(\n",
     "    ds=structure_ds, image_uids=image_uids, structure_names=structure_names\n",
-    ")\n",
-    "\n"
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "377d99bd-88e4-41a2-9d06-86d0ebe83d4f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dc2039f4-2ff2-4b89-9b97-75680d56bec0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "73107915-f68c-494e-808b-9a57674ee07a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "step_sizes = [64, 60, 55, 50, 45, 40, 37, 33, 30, 25]"
    ]
   },
   {
@@ -226,22 +221,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "predicted_contours_by_structure = rai.masks_to_contours_by_structure(\n",
-    "    x_grid=x_grid, y_grid=y_grid, masks=predicted_masks, structure_names=cfg[\"structures\"]\n",
-    ")\n",
-    "\n",
-    "aligned_predicted_contours_by_structure = rai.merge_contours_by_structure(\n",
-    "    predicted_contours_by_structure, align_map\n",
-    ")\n",
-    "\n",
-    "dice = {}\n",
-    "for name in align_map:\n",
-    "    dice[name] = rai.dice_from_contours_by_slice(\n",
-    "        dicom_contours_by_structure[name],\n",
-    "        aligned_predicted_contours_by_structure[name],\n",
-    "    )\n",
+    "collected_dice = {}    \n",
     "    \n",
-    "dice"
+    "for step_size in step_sizes:\n",
+    "    predicted_masks = rai.inference(\n",
+    "        cfg=cfg,\n",
+    "        models=models,\n",
+    "        image_stack=image_stack,\n",
+    "        max_batch_size=10,\n",
+    "        step_size=step_size,\n",
+    "    )\n",
+    "\n",
+    "    predicted_contours_by_structure = rai.masks_to_contours_by_structure(\n",
+    "        x_grid=x_grid, y_grid=y_grid, masks=predicted_masks, structure_names=cfg[\"structures\"]\n",
+    "    )\n",
+    "\n",
+    "    aligned_predicted_contours_by_structure = rai.merge_contours_by_structure(\n",
+    "        predicted_contours_by_structure, align_map\n",
+    "    )\n",
+    "\n",
+    "    dice = {}\n",
+    "    for name in align_map:\n",
+    "        dice[name] = rai.dice_from_contours_by_slice(\n",
+    "            dicom_contours_by_structure[name],\n",
+    "            aligned_predicted_contours_by_structure[name],\n",
+    "        )\n",
+    "\n",
+    "    collected_dice[step_size] = dice\n",
+    "    print(step_size)\n",
+    "    print(dice)"
    ]
   },
   {
